# secure-files-cli

./: .gitignore  LICENSE  README.md  compress_test.txt  filelist.txt  integration_test.txt  pyproject.toml  requirements.txt  test.txt
secure_files_cli/: __init__.py  batch_processor.py  cli.py  compression.py  config.py  core.py  integrity.py  key_derivation.py  key_management.py  secure_delete.py  utils.py
tests/: conftest.py  test_core.py
